@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.6.20) unstable; urgency=low
 
   * stock: clear stock after 60 seconds idle
+  * hstock: remove empty stocks
 
  --
 
